--- a/registro.html
+++ b/registro.html
@@ -7,11 +7,16 @@
     <title>Administración - Registro de Usuario</title>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css/admin.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Navbar -->
+    <div class="extra-nav">
+        <div class="container d-flex justify-content-end">
+            <a href="pedidos.html" class="me-3">Seguimiento de pedidos</a>      
+        </div>
+    </div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-5" href="#">
@@ -93,36 +98,41 @@
         <!-- Título del formulario -->
         <h3 id="registro" class="text-center mb-4">Registro de Usuario</h3>
         <!-- Formulario de registro -->
-        <form action="procesar_registro.php" method="POST">
+        <form id="formulario" class="formulario" action="procesar.php" method="">
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="nombres" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="nombres" name="nombres" required>
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="apellidos" class="form-label">Apellidos</label>
-                        <input type="text" class="form-control" id="apellidos" name="apellidos" required>
+                        <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos">
                     </div>
                 </div>
             </div>
             <div class="mb-3">
-                <label for="direccion" class="form-label">Dirección</label>
-                <input type="text" class="form-control" id="direccion" name="direccion" required>
+                <label for="rut">RUT</label>
+                <input type="text" class="form-control" id="rut" name="rut" placeholder="12345678-9">
             </div>
+            <div class="mb-3">
+                <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento</label>
+                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento">
+            </div>
+
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="fono" class="form-label">Fono de Contacto</label>
-                        <input type="text" class="form-control" id="fono" name="fono" required>
+                        <label for="telefono" class="form-label">Telefono de Contacto</label>
+                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="912345678">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="juan@correo.cl">
                     </div>
                 </div>
             </div>
@@ -130,23 +140,50 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
+                        <input type="password" class="form-control" id="password" name="password">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="confirm_password" class="form-label">Confirmar Contraseña</label>
-                        <input type="password" class="form-control" id="confirm_password" name="confirm_password"
-                            required>
+                        <input type="password" class="form-control" id="confirm_password" name="confirm_password">
                     </div>
                 </div>
             </div>
+
             <div class="mb-3">
-                <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento</label>
-                <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento" required>
+                <label for="direccion" class="form-label">Dirección</label>
+                <input type="text" class="form-control" id="direccion" name="direccion" placeholder="Avenida Mentira">
             </div>
+            <div class=" mb-3">
+                <label for="depto" class="form-label">Departamento o Detalle</label>
+                <input type="text" class="form-control" id="depto" placeholder="Departamento/Detalle" placeholder="123">
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label for="region" class="form-label">Región</label>
+                    <select id="region" class="form-control">
+                        <option value="">--Selecciona una region--</option>
+                        <option value="biobio">Biobio</option>
+                        <option value="metropolitana">Metropolitana</option>
+                    </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="comuna" class="form-label">Comuna</label>
+                    <select id="comuna" class="form-control">
+                        <option value="">--Selecciona una comuna--</option>
+                        <option value="biobio">Biobio</option>
+                        <option value="metropolitana">Metropolitana</option>
+                    </select>
+                </div>
+            </div>
+
             <!-- Botón Registrarse -->
-            <a href="index.html" id="btnRegistrarse" class="btn btn-dark ">Registrarse</a>
+            <button id="btnRegistrarse" class="btn btn-dark col-auto mb-3">Registrarse</button>
+            <p id="mensajeError" style="color: red;" class="mb-3"></p>
+            <div class="">
+                <p>Ya tienes cuenta? <a href="login.html">Inicia sesión aqui</a></p>
+            </div>
         </form>
     </div>
 
@@ -165,6 +202,7 @@
     </footer>
 
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="./assets/js/validacion.js"></script>
 </body>
 
 </html>
