--- a/usuarios.html
+++ b/usuarios.html
@@ -44,6 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="index.html">Panel Cliente</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Panel de cliente</a>
+                    </li>
                 </ul>
             </div>
         </div>
